# Azazeal_Anime_Characters_ComfyUI

./: LICENSE  README.md  __init__.py  anime_character_prompt_selector.py  pyproject.toml
anime_data/DC Comics/: -.json  All-Star Squadron.json  Alpha Lantern Corps.json  Apocalypse.json  Apokolips.json  Aquaman Family.json  Aquaman Family; formerly Black Lantern Corps.json  Aquaman Family; formerly Red Lantern Corps.json  Arsenal.json  Assorted Batman rogues.json  Atlantean Royal Family; formerly Black Lantern Corps.json  Batman Family (unofficially).json  Batman Family.json  Batman Inc..json  Batman Incorporated.json  Batman's Brother Eye attack group.json  Birds of Prey.json  Birds of Prey; formerly Justice League of America.json  Black Canary.json  Black Glove.json  Black Lantern Corps.json  Black Marvel Family.json  Blue Lantern Corps.json  Booster Gold International (BGI).json  Brotherhood of Evil.json  Central Bureau of Investigations.json  Checkmate.json  Clockwatchers.json  Club of Heroes.json  Connor Hawke.json  Crimebusters.json  Croatoans.json  D.E.O.json  Darkseid.json  Darkstars.json  Donna Troy.json  Doom Patrol.json  Eddie Fyers.json  Extreme Justice.json  F.B.I..json  (+192 more)
anime_data/Manual/: Arcane.json  DuckTales.json  The Owl House.json
anime_data/Marvel Comics/: & Holliway; formerly Avengers.json  (As Maverick) Formerly Gene Nation.json  (At time of death) Avengers; (Formerly) Legion of the Unliving.json  (Current) X-Factor (former) Ally of Black Tom and the Juggernaut.json  (Formerly) Sinister Twelve.json  -.json  (+637 more)
workflow/: example_workflow.json
(+14934 files in other folders)
